--- a/.github/workflows/ci_workflow_test.yml
+++ b/.github/workflows/ci_workflow_test.yml
@@ -3,6 +3,7 @@ on: [push]
 
 jobs:
     build:
+        name: Build and test
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
