--- a/.github/workflows/ci_workflow_test.yml
+++ b/.github/workflows/ci_workflow_test.yml
@@ -7,3 +7,6 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+
+            - name: Hello World
+            - run: echo "Hello, world!"
